avcodec/speexdec: fix frame_size for mode == 2

Should match the non-extradata path now, and fix ticket #11078.

Signed-off-by: James Almer <jamrial@gmail.com>